pkg/lang/testdata/ub/config/valid/input-string-literal.ub
factory: {
  inputs: { region: 'us-east-1' }
}
