pkg/lang/testdata/ub/config/invalid/input-local-needs-name.ub
locals: { region: 'us-east-1' }

factory: {
  inputs: { region: local['region'] }
}
